<resources>
    <string name="app_name">GameProyecto</string>
    <string name="personaje">Personaje</string>
    <string name="et_nombre">Como te llamas?</string>
    <string name="btn_texto">Jugar</string>
    <string name="text_nombre">Como te llamas?</string>

    // Nivel 1
    <string name="et_vidas">Manzanas:</string>
    <string name="jugadorNombre">Jugar:</string>
    <string name="totalScore">Score: 0</string>
    <string name="botonSumar">Comprobar</string>
    <string name="btn_comprobar">¡Comprobar!</string>
    <string name="tv_selecJuego">¡Selecione el juego que desees jugar!</string>
    <string name="tv_fruit">Fruit Maths</string>
    <string name="tv_words">Words Test</string>
    <string name="tv_intentos">Intentos:</string>
    <string name="btn_comprobark">¡Comprobar!</string>
    <string name="numero1">Numero1</string>
    <string name="suma">suma</string>

</resources>